@@ -22,3 +22,5 @@ potassiumChromate=potassium chromate
 potassiumDichromate=potassium dichromate
 potassiumPermanganate=potassium permanganate
 
+# Patterns
+pattern.0label={0}:
